--- a/components/common/Section/Section.module.scss
+++ b/components/common/Section/Section.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: calc(var(--max-width) + (var(--size-large) * 2));
   margin: 0 auto;
-  padding: 50px var(--size-large);
+  padding: var(--size-large) var(--size-large);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
